Don't import zero prices from GnuCash Print more details about the price to the console

BUG: 256282

svn path=/trunk/extragear/office/kmymoney/; revision=1205765